# python24

./: .gitignore  agent.proto  graph23.py  grpc_adapter.py  main.py  mcp_server.py  pyproject.toml  search_tool.py  service_handler.py  z___test23.py
schema/: agent_pb2.py  agent_pb2_grpc.py
z_resources23/: z_readMe1.md  z_readMe_google_geminiUsage.md
